// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextField component rendering state should match snapshot - TextField (custom icon with action): TextField custom icon with action snapshot 1`] = `
<div
  className="MuiFormControl-root NatDSFormControl-root-1"
>
  <label
    className="MuiFormLabel-root MuiInputLabel-root NatDSInputLabel-root-2 NatDSInputLabel-root-42 MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
    data-shrink={true}
    htmlFor="field"
  >
    Label
  </label>
  <div
    className="MuiInputBase-root MuiInput-root makeStyles-input-4 makeStyles-input-43 MuiInputBase-formControl MuiInput-formControl MuiInputBase-adornedEnd"
    onClick={[Function]}
    required={false}
    style={
      Object {
        "marginTop": 0,
      }
    }
  >
    <input
      aria-invalid={false}
      className="MuiInputBase-input MuiInput-input MuiInputBase-inputAdornedEnd"
      disabled={false}
      id="field"
      onAnimationStart={[Function]}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Placeholder"
      required={false}
      type="text"
    />
    <button
      className="MuiButtonBase-root MuiIconButton-root NatDSCustomIcon-root-39 NatDSCustomIcon-root-44"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiIconButton-label"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
          />
        </svg>
      </span>
    </button>
  </div>
  <p
    className="MuiFormHelperText-root NatDSFormHelperText-root-6 NatDSFormHelperText-root-45"
  >
    Assistive text
  </p>
</div>
`;

exports[`TextField component rendering state should match snapshot - TextField (custom icon): TextField custom icon snapshot 1`] = `
<div
  className="MuiFormControl-root NatDSFormControl-root-1"
>
  <label
    className="MuiFormLabel-root MuiInputLabel-root NatDSInputLabel-root-2 NatDSInputLabel-root-37 MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
    data-shrink={true}
    htmlFor="field"
  >
    Label
  </label>
  <div
    className="MuiInputBase-root MuiInput-root makeStyles-input-4 makeStyles-input-38 MuiInputBase-formControl MuiInput-formControl MuiInputBase-adornedEnd"
    onClick={[Function]}
    required={false}
    style={
      Object {
        "marginTop": 0,
      }
    }
  >
    <input
      aria-invalid={false}
      className="MuiInputBase-input MuiInput-input MuiInputBase-inputAdornedEnd"
      disabled={false}
      id="field"
      onAnimationStart={[Function]}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Placeholder"
      required={false}
      type="text"
    />
    <button
      className="MuiButtonBase-root MuiIconButton-root NatDSCustomIcon-root-39 NatDSCustomIcon-root-40"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiIconButton-label"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
          />
        </svg>
      </span>
    </button>
  </div>
  <p
    className="MuiFormHelperText-root NatDSFormHelperText-root-6 NatDSFormHelperText-root-41"
  >
    Assistive text
  </p>
</div>
`;

exports[`TextField component rendering state should match snapshot - TextField (default with empty theme): TextField default with empty theme snapshot 1`] = `
<div
  className="MuiFormControl-root NatDSFormControl-root-1"
>
  <label
    className="MuiFormLabel-root MuiInputLabel-root NatDSInputLabel-root-2 NatDSInputLabel-root-55 MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
    data-shrink={true}
    htmlFor="field"
  >
    Label
  </label>
  <div
    className="MuiInputBase-root MuiInput-root makeStyles-input-4 makeStyles-input-56 MuiInputBase-formControl MuiInput-formControl"
    onClick={[Function]}
    required={false}
    style={
      Object {
        "marginTop": 0,
      }
    }
  >
    <input
      aria-invalid={false}
      className="MuiInputBase-input MuiInput-input"
      disabled={false}
      id="field"
      onAnimationStart={[Function]}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Placeholder"
      required={false}
      type="text"
    />
  </div>
  <p
    className="MuiFormHelperText-root NatDSFormHelperText-root-6 NatDSFormHelperText-root-57"
  >
    Assistive text
  </p>
</div>
`;

exports[`TextField component rendering state should match snapshot - TextField (default without placeholder): TextField default without placeholder snapshot 1`] = `
<div
  className="MuiFormControl-root NatDSFormControl-root-1"
>
  <label
    className="MuiFormLabel-root MuiInputLabel-root NatDSInputLabel-root-2 NatDSInputLabel-root-14 MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
    data-shrink={true}
    htmlFor="field"
  >
    Label
  </label>
  <div
    className="MuiInputBase-root MuiInput-root makeStyles-input-4 makeStyles-input-15 MuiInputBase-formControl MuiInput-formControl"
    onClick={[Function]}
    required={false}
    style={
      Object {
        "marginTop": 0,
      }
    }
  >
    <input
      aria-invalid={false}
      className="MuiInputBase-input MuiInput-input"
      disabled={false}
      id="field"
      onAnimationStart={[Function]}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder=""
      required={false}
      type="text"
    />
  </div>
  <p
    className="MuiFormHelperText-root NatDSFormHelperText-root-6 NatDSFormHelperText-root-16"
  >
    Assistive text
  </p>
</div>
`;

exports[`TextField component rendering state should match snapshot - TextField (default): TextField default snapshot 1`] = `
<div
  className="MuiFormControl-root NatDSFormControl-root-1"
>
  <label
    className="MuiFormLabel-root MuiInputLabel-root NatDSInputLabel-root-2 NatDSInputLabel-root-3 MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
    data-shrink={true}
    htmlFor="field"
  >
    Label
  </label>
  <div
    className="MuiInputBase-root MuiInput-root makeStyles-input-4 makeStyles-input-5 MuiInputBase-formControl MuiInput-formControl"
    onClick={[Function]}
    required={false}
    style={
      Object {
        "marginTop": 0,
      }
    }
  >
    <input
      aria-invalid={false}
      className="MuiInputBase-input MuiInput-input"
      disabled={false}
      id="field"
      onAnimationStart={[Function]}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Placeholder"
      required={false}
      type="text"
    />
  </div>
  <p
    className="MuiFormHelperText-root NatDSFormHelperText-root-6 NatDSFormHelperText-root-8"
  >
    Assistive text
  </p>
</div>
`;

exports[`TextField component rendering state should match snapshot - TextField (disabled): TextField disabled snapshot 1`] = `
<div
  className="MuiFormControl-root NatDSFormControl-root-1"
>
  <label
    className="MuiFormLabel-root MuiInputLabel-root NatDSInputLabel-root-2 NatDSInputLabel-root-34 MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink Mui-disabled Mui-disabled"
    data-shrink={true}
    htmlFor="field"
  >
    Label
  </label>
  <div
    className="MuiInputBase-root MuiInput-root makeStyles-input-4 makeStyles-input-35 Mui-disabled Mui-disabled MuiInputBase-formControl MuiInput-formControl"
    onClick={[Function]}
    required={false}
    style={
      Object {
        "marginTop": 0,
      }
    }
  >
    <input
      aria-invalid={false}
      className="MuiInputBase-input MuiInput-input Mui-disabled Mui-disabled"
      disabled={true}
      id="field"
      onAnimationStart={[Function]}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Placeholder"
      required={false}
      type="text"
    />
  </div>
  <p
    className="MuiFormHelperText-root NatDSFormHelperText-root-6 NatDSFormHelperText-root-36 Mui-disabled"
  >
    Assistive text
  </p>
</div>
`;

exports[`TextField component rendering state should match snapshot - TextField (error): TextField error snapshot 1`] = `
<div
  className="MuiFormControl-root NatDSFormControl-root-1"
>
  <label
    className="MuiFormLabel-root MuiInputLabel-root NatDSInputLabel-root-2 NatDSInputLabel-root-25 MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink Mui-error Mui-error"
    data-shrink={true}
    htmlFor="field"
  >
    Label
  </label>
  <div
    className="MuiInputBase-root MuiInput-root makeStyles-input-4 makeStyles-input-26 MuiInputBase-formControl MuiInput-formControl"
    data-state="error"
    onClick={[Function]}
    required={false}
    style={
      Object {
        "marginTop": 0,
      }
    }
  >
    <input
      aria-invalid={false}
      className="MuiInputBase-input MuiInput-input"
      disabled={false}
      id="field"
      onAnimationStart={[Function]}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Placeholder"
      required={false}
      type="text"
    />
  </div>
  <p
    className="MuiFormHelperText-root NatDSFormHelperText-root-6 NatDSFormHelperText-root-27 Mui-error"
  >
    <i
      aria-hidden={true}
      className="material-icons MuiIcon-root natds-icons natds-icons-outlined-alert-cancel NatDSFormHelperText-icon-7 NatDSIcon-root-23 NatDSIcon-root-28"
    />
    Assistive text
  </p>
</div>
`;

exports[`TextField component rendering state should match snapshot - TextField (filled): TextField filled snapshot 1`] = `
<div
  className="MuiFormControl-root NatDSFormControl-root-1"
>
  <label
    className="MuiFormLabel-root MuiInputLabel-root NatDSInputLabel-root-2 NatDSInputLabel-root-17 MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
    data-shrink={true}
    htmlFor="field"
  >
    Label
  </label>
  <div
    className="MuiInputBase-root MuiInput-root makeStyles-input-4 makeStyles-input-18 MuiInputBase-formControl MuiInput-formControl"
    onClick={[Function]}
    required={false}
    style={
      Object {
        "marginTop": 0,
      }
    }
  >
    <input
      aria-invalid={false}
      className="MuiInputBase-input MuiInput-input"
      disabled={false}
      id="field"
      onAnimationStart={[Function]}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Placeholder"
      required={false}
      type="text"
      value="some value"
    />
  </div>
  <p
    className="MuiFormHelperText-root NatDSFormHelperText-root-6 NatDSFormHelperText-root-19"
  >
    Assistive text
  </p>
</div>
`;

exports[`TextField component rendering state should match snapshot - TextField (mask): TextField mask snapshot 1`] = `
<div
  className="MuiFormControl-root NatDSFormControl-root-1"
>
  <label
    className="MuiFormLabel-root MuiInputLabel-root NatDSInputLabel-root-2 NatDSInputLabel-root-46 MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
    data-shrink={true}
    htmlFor="field"
  >
    Label
  </label>
  <div
    className="MuiInputBase-root MuiInput-root makeStyles-input-4 makeStyles-input-47 MuiInputBase-formControl MuiInput-formControl"
    onClick={[Function]}
    required={false}
    style={
      Object {
        "marginTop": 0,
      }
    }
  >
    <input
      aria-invalid={false}
      className="MuiInputBase-input MuiInput-input"
      disabled={false}
      id="field"
      inputRef={[Function]}
      mask={
        Array [
          "(",
          /\\[1-9\\]/,
          /\\\\d/,
          ")",
          " ",
          /\\\\d/,
          /\\\\d/,
          /\\\\d/,
          /\\\\d/,
          /\\\\d/,
          "-",
          /\\\\d/,
          /\\\\d/,
          /\\\\d/,
          /\\\\d/,
        ]
      }
      onAnimationStart={[Function]}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Placeholder"
      required={false}
      type="text"
    />
  </div>
  <p
    className="MuiFormHelperText-root NatDSFormHelperText-root-6 NatDSFormHelperText-root-48"
  >
    Assistive text
  </p>
</div>
`;

exports[`TextField component rendering state should match snapshot - TextField (property forwarded): TextField property forwarded snapshot 1`] = `
<div
  className="MuiFormControl-root NatDSFormControl-root-1"
>
  <label
    className="MuiFormLabel-root MuiInputLabel-root NatDSInputLabel-root-2 NatDSInputLabel-root-52 MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
    data-shrink={true}
    htmlFor="field"
  >
    Label
  </label>
  <div
    className="MuiInputBase-root MuiInput-root makeStyles-input-4 makeStyles-input-53 MuiInputBase-formControl MuiInput-formControl"
    onClick={[Function]}
    required={false}
    style={
      Object {
        "marginTop": 0,
      }
    }
  >
    <input
      aria-invalid={false}
      className="MuiInputBase-input MuiInput-input"
      disabled={false}
      id="field"
      onAnimationStart={[Function]}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Placeholder"
      required={false}
      type="email"
    />
  </div>
  <p
    className="MuiFormHelperText-root NatDSFormHelperText-root-6 NatDSFormHelperText-root-54"
  >
    Assistive text
  </p>
</div>
`;

exports[`TextField component rendering state should match snapshot - TextField (readonly explicitly set to false): TextField readonly explicitly set to false snapshot 1`] = `
<div
  className="MuiFormControl-root NatDSFormControl-root-1"
>
  <label
    className="MuiFormLabel-root MuiInputLabel-root NatDSInputLabel-root-2 NatDSInputLabel-root-11 MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
    data-shrink={true}
    htmlFor="field"
  >
    Label
  </label>
  <div
    className="MuiInputBase-root MuiInput-root makeStyles-input-4 makeStyles-input-12 MuiInputBase-formControl MuiInput-formControl"
    onClick={[Function]}
    required={false}
    style={
      Object {
        "marginTop": 0,
      }
    }
  >
    <input
      aria-invalid={false}
      className="MuiInputBase-input MuiInput-input"
      disabled={false}
      id="field"
      onAnimationStart={[Function]}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Placeholder"
      readOnly={false}
      required={false}
      type="text"
    />
  </div>
  <p
    className="MuiFormHelperText-root NatDSFormHelperText-root-6 NatDSFormHelperText-root-13"
  >
    Assistive text
  </p>
</div>
`;

exports[`TextField component rendering state should match snapshot - TextField (readonly explicitly set to true): TextField readonly explicitly set to true snapshot 1`] = `
<div
  className="MuiFormControl-root NatDSFormControl-root-1"
>
  <label
    className="MuiFormLabel-root MuiInputLabel-root NatDSInputLabel-root-2 NatDSInputLabel-root-9 MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
    data-shrink={true}
    htmlFor="field"
  >
    Label
  </label>
  <div
    className="MuiInputBase-root MuiInput-root makeStyles-input-4 makeStyles-input-10 MuiInputBase-formControl MuiInput-formControl"
    onClick={[Function]}
    required={false}
    style={
      Object {
        "marginTop": 0,
      }
    }
  >
    <input
      aria-invalid={false}
      className="MuiInputBase-input MuiInput-input"
      disabled={false}
      id="field"
      onAnimationStart={[Function]}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Placeholder"
      readOnly={true}
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`TextField component rendering state should match snapshot - TextField (required without label): TextField required without label snapshot 1`] = `
<div
  className="MuiFormControl-root NatDSFormControl-root-1"
>
  <div
    className="MuiInputBase-root MuiInput-root makeStyles-input-4 makeStyles-input-32 MuiInputBase-formControl MuiInput-formControl"
    onClick={[Function]}
    required={true}
    style={
      Object {
        "marginTop": 0,
      }
    }
  >
    <input
      aria-invalid={false}
      className="MuiInputBase-input MuiInput-input"
      disabled={false}
      id="field"
      onAnimationStart={[Function]}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Placeholder"
      required={true}
      type="text"
    />
  </div>
  <p
    className="MuiFormHelperText-root NatDSFormHelperText-root-6 NatDSFormHelperText-root-33"
  >
    Assistive text
  </p>
</div>
`;

exports[`TextField component rendering state should match snapshot - TextField (required): TextField required snapshot 1`] = `
<div
  className="MuiFormControl-root NatDSFormControl-root-1"
>
  <label
    className="MuiFormLabel-root MuiInputLabel-root NatDSInputLabel-root-2 NatDSInputLabel-root-29 MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
    data-shrink={true}
    htmlFor="field"
  >
    Label *
  </label>
  <div
    className="MuiInputBase-root MuiInput-root makeStyles-input-4 makeStyles-input-30 MuiInputBase-formControl MuiInput-formControl"
    onClick={[Function]}
    required={true}
    style={
      Object {
        "marginTop": 0,
      }
    }
  >
    <input
      aria-invalid={false}
      className="MuiInputBase-input MuiInput-input"
      disabled={false}
      id="field"
      onAnimationStart={[Function]}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Placeholder"
      required={true}
      type="text"
    />
  </div>
  <p
    className="MuiFormHelperText-root NatDSFormHelperText-root-6 NatDSFormHelperText-root-31"
  >
    Assistive text
  </p>
</div>
`;

exports[`TextField component rendering state should match snapshot - TextField (success): TextField success snapshot 1`] = `
<div
  className="MuiFormControl-root NatDSFormControl-root-1"
>
  <label
    className="MuiFormLabel-root MuiInputLabel-root NatDSInputLabel-root-2 NatDSInputLabel-root-20 MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
    data-shrink={true}
    htmlFor="field"
  >
    Label
  </label>
  <div
    className="MuiInputBase-root MuiInput-root makeStyles-input-4 makeStyles-input-21 MuiInputBase-formControl MuiInput-formControl"
    data-state="success"
    onClick={[Function]}
    required={false}
    style={
      Object {
        "marginTop": 0,
      }
    }
  >
    <input
      aria-invalid={false}
      className="MuiInputBase-input MuiInput-input"
      disabled={false}
      id="field"
      onAnimationStart={[Function]}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Placeholder"
      required={false}
      type="text"
    />
  </div>
  <p
    className="MuiFormHelperText-root NatDSFormHelperText-root-6 NatDSFormHelperText-root-22"
  >
    <i
      aria-hidden={true}
      className="material-icons MuiIcon-root natds-icons natds-icons-outlined-alert-check NatDSFormHelperText-icon-7 NatDSIcon-root-23 NatDSIcon-root-24"
    />
    Assistive text
  </p>
</div>
`;

exports[`TextField component rendering state should match snapshot - TextField (theme change): TextField theme change snapshot 1`] = `
<div
  className="MuiFormControl-root NatDSFormControl-root-1"
>
  <label
    className="MuiFormLabel-root MuiInputLabel-root NatDSInputLabel-root-2 NatDSInputLabel-root-49 MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
    data-shrink={true}
    htmlFor="field"
  >
    Label
  </label>
  <div
    className="MuiInputBase-root MuiInput-root makeStyles-input-4 makeStyles-input-50 MuiInputBase-formControl MuiInput-formControl"
    onClick={[Function]}
    required={false}
    style={
      Object {
        "marginTop": 0,
      }
    }
  >
    <input
      aria-invalid={false}
      className="MuiInputBase-input MuiInput-input"
      disabled={false}
      id="field"
      onAnimationStart={[Function]}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Placeholder"
      required={false}
      type="text"
    />
  </div>
  <p
    className="MuiFormHelperText-root NatDSFormHelperText-root-6 NatDSFormHelperText-root-51"
  >
    Assistive text
  </p>
</div>
`;
